# labust-ros-pkg

ident_so/: CMakeLists.txt  package.xml
ident_so/src/: IdentificationNode.cpp
labust_allocation/: CMakeLists.txt  allocation_plugin.xml  mainpage.dox  nodelet_plugins.xml  package.xml
labust_allocation/include/labust/allocation/: ScaleAllocation.hpp  ThrustAllocation.hpp  ThrusterModels.hpp  allocation_interface.h  allocation_node.h  ethruster.h  thruster_configuration.h  x2d_adaptive.h
labust_allocation/launch/: allocation_plugin_load.launch  xconfig.yaml  xconfig2.yaml
labust_allocation/src/allocation_node/: allocation_node.cpp
labust_allocation/src/labust_allocation/: ScaleAllocation.cpp  ThrustAllocation.cpp  thruster_configuration.cpp  x2d_adaptive.cpp
labust_control/: CMakeLists.txt  package.xml
labust_control/launch/: control.launch  control.yaml  control_test.launch  setenv.bash  simulator.launch  test.yaml
labust_control/src/: ALTControl.cpp  DepthControl.cpp  FADPControl.cpp  FADP_3DControl.cpp  HDGControl.cpp  PitchControl.cpp  RefManual.cpp  VTControl.cpp  VelocityControl.cpp  diver_track.py  ramp_sim.py
labust_control/src/esc/: ESCControlClassic_UV.cpp  ESControlBounded_UV.cpp  ESControlEKF_MODEL_UV.cpp  ESControlEKF_UV.cpp
labust_control/src/esctoolkit/: esc_bounded.cpp  esc_classic.cpp  esc_ekf_grad.cpp  esc_ekf_grad_model.cpp  static_map.cpp
labust_control/src/line_following/: UALFControl.cpp
labust_control/src/manual_control/: ManualController.cpp  manual_control.cpp
labust_control/src/pidtoolkit/: PIDBase.c  PIFFController.c
labust_control/src/velocity_controller/: VelCon.cpp
labust_diagnostics/: CMakeLists.txt  README.md  package.xml
labust_diagnostics/launch/: cpu_monitor.launch  hd_monitor.launch  ntp_monitor.launch  rosbag_monitor.launch
labust_diagnostics/scripts/: cpu_monitor.py  hd_monitor.py  ntp_monitor.py  rosbag_monitor.py
labust_diagnostics/src/: BatteryDiagnostics.cpp  SystemDiagnosticsNode.cpp  ThrusterDiagnostics.cpp
labust_execution/: CMakeLists.txt  package.xml
labust_execution/src/: PNController.cpp
labust_execution/src/pngraph/: PNGraph.cpp
labust_execution/src/pnmanager/: LegacyCompat.cpp
labust_execution/src/simple_manager/: ControllerGraph.cpp  ControllerManager.cpp
labust_execution/src/test/: test_exec2.cpp
labust_framework/: package.xml
labust_gui/: CMakeLists.txt  package.xml  plugins.xml  setup.py
labust_gui/src/control/: conmon_gui.py  ident_gui.py  joy_gui.py  simman_gui.py
labust_mission/: CMakeLists.txt  package.xml
labust_mission/include/labust_mission/: controllerManager.hpp  dataManager.hpp  eventEvaluation.hpp  labustMission.hpp  lowLevelConfigure.hpp  missionExecution.hpp  primitiveActionClient.hpp  utils.hpp  xmlPrinter.hpp
labust_mission/launch/: labust_control_template.launch  labust_mission_template.launch  labust_navigation_template.launch  labust_sim_template.launch  labust_visualization_template.launch
labust_mission/launch/labust_mission/: labust_mission_test.launch  setenv.bash  test.launch
labust_mission/launch/pladypos/: diver_tracking.launch  labust_mission_pladypos.launch  labust_mission_topiside.launch  labust_mission_topside.launch  sensors.launch  setenv.bash  setenv_topside.bash  static_frames.launch
labust_mission/launch/replay/: navparams_ex.yaml  replay.launch  setenv.bash  static_frames.launch
labust_mission/launch/sbnav/: sbnav_test.launch  setenv.bash
labust_mission/missions/: course_keeping_turns.cpp  lawnmower_on_demand.cpp  mzos.cpp  mzos_test.cpp
labust_mission/scripts/: install_tinyxml2.sh  parseGUI.py  parsegui.ui  topic_transform.py
labust_mission/src/: data_event_manager.cpp  mission_exec.cpp  mission_parser.cpp  neptus_parser.cpp
labust_navigation/: CMakeLists.txt  package.xml
labust_navigation/src/labust_navigation/: EKF_3D_USBLModel.cpp  KinematicModel.cpp  LDTravModelExtended.cpp  RelativeTrackingModel.cpp  SBModel.cpp  SBModelKinematic.cpp  SensorHandlers.cpp
labust_primitives/src/: DPprimitive.cpp  go2point_FA.cpp  go2point_UA.cpp
labust_sim/: CMakeLists.txt  package.xml
labust_uvapp/: CMakeLists.txt  package.xml
labust_uvapp/include/labust/control/: VelocityControl.hpp
labust_uvapp/src/: VelocityControl.cpp
matlogger/launch/: std_logger.launch
snippets/: CMakeLists.txt  package.xml
(+76 files in other folders)
