<?xml version="1.0"?>
<package>
  <name>labust_uvapp</name>
  <version>0.0.59</version>
	<description>
		The package contains the general UV control and navigation applications.
		It contains the related ROS nodes for vehicle control, identification,
		navigation and simulation.
	</description>

  <maintainer email="dnad@todo.todo">Dula Nad</maintainer>
  <license>BSD</license>
  <!-- <url type="website">http://ros.org/wiki/labust_uvapp</url> -->
  <author email="dula.nad@gmail.com">Dula Nad</author>

  <buildtool_depend>catkin</buildtool_depend>
	
	<build_depend>roscpp</build_depend>
	<build_depend>message_generation</build_depend>
	<build_depend>labust_base</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>nav_msgs</build_depend>
	<build_depend>auv_msgs</build_depend>
	<build_depend>dynamic_reconfigure</build_depend>
	<build_depend>sensor_msgs</build_depend>
	<build_depend>tf2_ros</build_depend>
	<build_depend>geometry_msgs</build_depend>
	<build_depend>snippets</build_depend>
	
	<run_depend>roscpp</run_depend>
	<run_depend>labust_base</run_depend>
	<run_depend>std_msgs</run_depend>
	<run_depend>nav_msgs</run_depend>
	<run_depend>auv_msgs</run_depend>
	<run_depend>dynamic_reconfigure</run_depend>
	<run_depend>sensor_msgs</run_depend>
	<run_depend>message_runtime</run_depend>
	<run_depend>tf2_ros</run_depend>
	<run_depend>geometry_msgs</run_depend>
	
</package>
